[gd_scene load_steps=3 format=2]

[ext_resource path="res://hutbox.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
height = 5.6761

[node name="hurtbox" type="Area2D"]
scale = Vector2( 0.48, 1 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.956863, 0.0627451, 0.627451, 1 )
self_modulate = Color( 0.733333, 0.219608, 0.219608, 1 )
scale = Vector2( 1.02149, 0.552642 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="invincibility_ended" from="." to="." method="_on_hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
